# RudimentaryCamera

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
src/: main.cpp
ui/: main_window.cpp  main_window.hpp  main_window.ui
